WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191555
Rollout 238026: It caused ~8% JetStream 2 regressions on some iOS devices
https://bugs.webkit.org/show_bug.cgi?id=191555
Summary
Rollout 238026: It caused ~8% JetStream 2 regressions on some iOS devices
Saam Barati
Reported
2018-11-12 12:40:54 PST
...
Attachments
patch for landing
(11.50 KB, patch)
2018-11-12 12:52 PST
,
Saam Barati
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(11.51 KB, patch)
2018-11-12 13:32 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-11-12 12:52:53 PST
Created
attachment 354574
[details]
patch for landing
WebKit Commit Bot
Comment 2
2018-11-12 13:23:44 PST
Comment on
attachment 354574
[details]
patch for landing Rejecting
attachment 354574
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 354574, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
https://webkit-queues.webkit.org/results/9961961
Saam Barati
Comment 3
2018-11-12 13:32:24 PST
Created
attachment 354585
[details]
patch for landing
WebKit Commit Bot
Comment 4
2018-11-12 14:10:47 PST
Comment on
attachment 354585
[details]
patch for landing Clearing flags on attachment: 354585 Committed
r238109
: <
https://trac.webkit.org/changeset/238109
>
WebKit Commit Bot
Comment 5
2018-11-12 14:10:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-12 14:11:29 PST
<
rdar://problem/46002795
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug