Unreviewed. Rollout 238026: It caused ~8% JetStream 2 regressions on some iOS devices https://bugs.webkit.org/show_bug.cgi?id=191555

* bytecode/UnlinkedFunctionExecutable.cpp:
(JSC::UnlinkedFunctionExecutable::fromGlobalCode):
* bytecode/UnlinkedFunctionExecutable.h:
* parser/SourceCodeKey.h:
(JSC::SourceCodeKey::SourceCodeKey):
(JSC::SourceCodeKey::operator== const):
* runtime/CodeCache.cpp:
(JSC::CodeCache::getUnlinkedGlobalCodeBlock):
(JSC::CodeCache::getUnlinkedGlobalFunctionExecutable):
* runtime/CodeCache.h:
* runtime/FunctionConstructor.cpp:
(JSC::constructFunctionSkippingEvalEnabledCheck):
* runtime/FunctionExecutable.cpp:
(JSC::FunctionExecutable::fromGlobalCode):
* runtime/FunctionExecutable.h:


Canonical link: https://commits.webkit.org/206320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238109 268f45cc-cd09-0410-ab3c-d52691b4dbfc